samples/_failures_safe/1761127839_590071_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36e0ad51.c: In function ‘scan_operator’:
./samples/SAFE/__tmp_36e0ad51.c:155:5: error: expected identifier at end of input
  155 |     lexer->
      |     ^~~~~
./samples/SAFE/__tmp_36e0ad51.c:155:5: error: expected declaration or statement at end of input
